@@ -1,0 +1,13 @@
+<configure xmlns="http://namespaces.zope.org/zope"
+           xmlns:genericsetup="http://namespaces.zope.org/genericsetup"
+           i18n_domain="rhaptos">
+
+  <genericsetup:registerProfile
+      name="default"
+      title="Products.RhaptosContent"
+      directory="profiles/default"
+      description="Extension profile for Products.RhaptosContent."
+      provides="Products.GenericSetup.interfaces.EXTENSION"
+      />
+
+</configure>
