@@ -1,0 +1,9 @@
+<?xml version="1.0"?>
+<object name="portal_skins" meta_type="Plone Skins Tool">
+  <object name="rhaptos_content" meta_type="Filesystem Directory View"
+      directory="Products.RhaptosContent/skins/rhaptos_content"/>
+  <skin-path name="*">
+    <layer name="rhaptos_content" insert-after="custom"/>
+  </skin-path>
+</object>
+
