@@ -1,3 +1,8 @@
+trunk (2009-09-23)
+==================
+
+  - CONNEXIONSSRV-34: Refactor to use GenericSetup [jlaplace]
+
 trunk (2009-09-15)
 ==================
 
